# SALESFORCE-BOT

./: .env.example  .gitignore  CLAUDE.md  OpenAI_Cost_Breakdown.rtf  README.md  chatbot_agentic_test_results.md  check_functions.py  check_functions_simple.py  fix_cosmos_params.py  fix_plan_id.py  list_prompts.py  server.log.err  simple_check.py  test.ipynb  test_agent_system.py  test_aoai_async.py  test_api.py  test_chat_api.py  test_cosmos_init.py  test_cosmos_methods.py  test_detailed.py  test_direct_vs_sql.py  test_graph.py  test_no_tool.py  test_planner_prompt.py  test_request.json  test_settings.py  test_simple.py  test_single_sql.py  test_sql_agent.py  test_sql_step_by_step.py  test_sql_with_accounts.py  test_various_messages.py  upload_functions.py
chatbot/: .env.example  Dockerfile  README.md  init_data.py  pyproject.toml  pytest.ini  requirements.txt  start_server.py  test_agentic_flow.py  test_basic_functionality.py  test_clean_implementation.py  test_external_services.py  test_request.py
chatbot/functions/: account_resolver_function.json  graph_agent.json  graph_relationship_query.json  sql_agent.json  sql_query_function.json
chatbot/prompts/: system_prompt.json
chatbot/src/chatbot/: __init__.py  app.py  main.py  minimal_app.py  test_app.py
chatbot/src/chatbot/agents/: __init__.py  graph_agent.py  hybrid_agent.py  sql_agent.py  tool_definitions.py
chatbot/src/chatbot/clients/: __init__.py  aoai_client.py  cosmos_client.py  fabric_client.py  gremlin_client.py
chatbot/src/chatbot/config/: settings.py
chatbot/tests/: test_placeholder.md  test_planner_scenarios.py
(+173 files in other folders)
